@@ -33,6 +33,7 @@ New Features:
     are no longer supported and must be of the form "<tag>" or "</tag>".  This
     matches Mediawiki.
   * Add a honeypot input during registration to deter spambots.
+  * Use the cache more effectively to reduce memory usage.
   * Remove ability to automatically upgrade from versions prior to 1.0.
   * Upgrade to Lucene Search 3.5.
   * Upgrade to commons-lang 3.1.
